# Hex

./: CMakeLists.txt
.github/workflows/: build_custom.yml
plugins/builtin/source/content/: tools_entries.cpp  ui_items.cpp
plugins/example_rust/: CMakeLists.txt
plugins/example_rust/source/: plugin_example.rs
plugins/libimhex/: CMakeLists.txt
plugins/libimhex-rust/: build.rs
plugins/libimhex-rust/imgui-rs/src/: context.rs  lib.rs
plugins/libimhex-rust/src/: content_registry.rs  content_registry_ffi.rs  imhex_api_ffi.rs  lib.rs  rust_utils.rs  rust_utils_ffi.rs
plugins/libimhex/include/hex/api/: content_registry.hpp
plugins/libimhex/include/hex/helpers/: paths.hpp  utils.hpp
plugins/libimhex/include/hex/views/: view_rust.hpp
plugins/libimhex/source/api/: content_registry.cpp
plugins/libimhex/source/helpers/: paths.cpp  utils.cpp
plugins/rust_wrapper/: CMakeLists.txt
plugins/rust_wrapper/include/: rust_utils.hpp
plugins/rust_wrapper/include/views/: view_rust.hpp
plugins/rust_wrapper/source/: rust_utils.cpp
source/views/: view_hexeditor.cpp
source/window/: window.cpp
